2007-10-12  Jim Evins  <evins@snaught.com>

	* docs/libglabels/libglabels-decl-list.txt:
	* docs/libglabels/libglabels-sections.txt:
	* docs/libglabels/libglabels-undocumented.txt:
	* docs/libglabels/tmpl/category.sgml:
	* docs/libglabels/tmpl/enums.sgml:
	* docs/libglabels/tmpl/libglabels-unused.sgml:
	* docs/libglabels/tmpl/paper.sgml:
	* docs/libglabels/tmpl/template-struct.sgml:
	* libglabels/init.c:
	* libglabels/template.c:
	* libglabels/template.h:
		Another pass at fleshing out the libglabels documentation.
	* src/cairo-label-path.c:
	* src/cairo-markup-path.c:
	* src/label.c:
	* src/mini-preview-pixbuf.c:
	* src/print-op.c:
	* src/print.c:
	* src/view.c:
	* src/wdgt-media-select.c:
	* src/wdgt-mini-preview.c:
	* src/wdgt-print-copies.c:
	* src/wdgt-print-merge.c:
	* src/wdgt-rotate-label.c:
		Removed lgl_template_get_first_frame() from libglabels API and all references.

2007-10-11  Jim Evins  <evins@snaught.com>
	* configure.in:
		Extended checks for deprecated symbols.
	* libglabels/template.c:
		Removed g_strcasecmp references, which are deprecated.

2007-10-09  Jim Evins  <evins@snaught.com>

	* src/merge-evolution.c:
		Create address book if it does not exist.  Also, be more robust about handling
		error conditions -- don't just assume GError has been set.

2007-10-08  Jim Evins  <evins@snaught.com>

	* libglabels/template.c:
	* libglabels/xml-template.c:
	* src/template-designer.c:
		Missed some symbols with libglabels API work.

2007-10-01  Jim Evins  <evins@snaught.com>

	* docs/libglabels/libglabels-decl-list.txt:
	* docs/libglabels/libglabels-docs.sgml:
	* docs/libglabels/libglabels-sections.txt:
	* docs/libglabels/libglabels-undocumented.txt:
	* docs/libglabels/tmpl/category.sgml:
	* docs/libglabels/tmpl/enums.sgml:
	* docs/libglabels/tmpl/init.sgml:
	* docs/libglabels/tmpl/libglabels-unused.sgml:
	* docs/libglabels/tmpl/paper.sgml:
	* docs/libglabels/tmpl/template-construction.sgml:
	* docs/libglabels/tmpl/template-db.sgml: